[package]
name = "owcrypt"
license = "GPL-3.0"
version = "0.0.3"
authors = ["heshuchao <heshuchao@hotmail.com>"]
build = "build.rs"
readme = "README.md"
description = "Rust version for BlockTree's owcrypt library"
homepage = "https://github.com/blocktree/"

repository = "https://github.com/Brochao/rust-owcrypt"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sha1 = "0.6.0"
#sha2 = "0.8.2"
#sha3 = "0.9.1"
#md4 = "0.9.0"
#md5 = "0.7.0"
#ripemd160 = "0.9.1"
blake2-rfc = "0.2.18"
#sm3 = "0.2.0"
#blake = "2.0.1"
#hmac-sha256 = "0.1.2"
#hmac-sha512 = "0.1.6"
libc = "0.2"
wasm-bindgen = "0.2.65"


[build-dependencies]
cc = "1.0"


[lib]
crate-type = ["cdylib"]